[tool.poetry]
name = "cp2k-input-tools"
version = "0.6.0"
description = "Python tools to handle CP2K input files"
authors = ["Tiziano Müller <tiziano.mueller@chem.uzh.ch>"]
repository = "https://github.com/cp2k/cp2k-input-tools"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Intended Audience :: Science/Research",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
transitions = "^0.7"
pint = ">=0.15,<0.18"
"ruamel.yaml" = {version = ">=0.16.5,<0.18.0", optional = true}
pygls = {version = ">=0.8,<0.11", optional = true}
dataclasses = {version = ">=0.7,~0", python = "~3.6"}
Jinja2 = "^2.11.3"

[tool.poetry.extras]
yaml = ["ruamel.yaml"]
lsp = ["pygls"]

[tool.poetry.dev-dependencies]
pytest = "^6.0"
codecov = "^2.0.15"
pytest-cov = "^2.7.1"
pytest-console-scripts = "^1.0.0"
sphinx = "^3.2.1"
sphinx-rtd-theme = "^0.5.0"
taskipy = "^1.4.0"

[tool.poetry.scripts]
cp2klint = 'cp2k_input_tools.cli:cp2klint'
fromcp2k = 'cp2k_input_tools.cli:fromcp2k'
tocp2k = 'cp2k_input_tools.cli:tocp2k'
cp2kgen = 'cp2k_input_tools.cli:cp2kgen'
cp2kget = 'cp2k_input_tools.cli:cp2kget'
cp2k-language-server = 'cp2k_input_tools.cli:cp2k_language_server'

[tool.black]
line-length = 132
target_version = ['py36']

[tool.taskipy.tasks]
test = "pytest"
html_docs = "make html -C docs"

[build-system]
requires = ["poetry>=1"]
build-backend = "poetry.masonry.api"
