[tool.poetry]
name = "cp2k-input-tools"
version = "0.7.3"
description = "Python tools to handle CP2K input files"
authors = ["Tiziano Müller <tiziano.mueller@chem.uzh.ch>"]
repository = "https://github.com/cp2k/cp2k-input-tools"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Intended Audience :: Science/Research",
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.6.1,<4"
transitions = "^0.7"
pint = ">=0.15,<0.18"
"ruamel.yaml" = {version = ">=0.16.5,<0.18.0", optional = true}
pygls = {version = ">=0.10,<0.12", optional = true}
dataclasses = {version = ">=0.7,~0", python = "~3.6"}
Jinja2 = ">=2.11.3,<4.0.0"
pydantic = "^1.8.2"
click = ">=7.1.2,<9"

[tool.poetry.extras]
yaml = ["ruamel.yaml"]
lsp = ["pygls"]

[tool.poetry.dev-dependencies]
pytest = "^6.0"
codecov = "^2.0.15"
pytest-cov = "^3.0.0"
pytest-console-scripts = "^1.0.0"
sphinx = "^4.0.1"
sphinx-rtd-theme = "^1.0.0"
taskipy = "^1.4.0"
mypy = "^0.910"
sphinx-click = "^3.0.1"

[tool.poetry.scripts]
cp2klint = 'cp2k_input_tools.cli.lint:cp2klint'
fromcp2k = 'cp2k_input_tools.cli.fromcp2k:fromcp2k'
tocp2k = 'cp2k_input_tools.cli.tocp2k:tocp2k'
cp2kgen = 'cp2k_input_tools.cli.cp2kgen:cp2kgen'
cp2kget = 'cp2k_input_tools.cli.cp2kget:cp2kget'
cp2k-language-server = 'cp2k_input_tools.cli.lsp:cp2k_language_server'
cp2k-datafile-lint = 'cp2k_input_tools.cli.datafile_lint:cp2k_datafile_lint'

[tool.black]
line-length = 132
target_version = ['py36']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.taskipy.tasks]
test = "pytest"
html_docs = "make html -C docs"

[build-system]
requires = ["poetry>=1"]
build-backend = "poetry.masonry.api"
