[tool.poetry]
name = "cp2k-input-tools"
version = "0.9.1"
description = "Python tools to handle CP2K input files"
authors = ["Tiziano Müller <tiziano.mueller@chem.uzh.ch>"]
repository = "https://github.com/cp2k/cp2k-input-tools"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Intended Audience :: Science/Research",
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4"
transitions = ">=0.7,<0.10"
Pint = ">=0.15,<0.24"
"ruamel.yaml" = {version = ">=0.16.5,<0.19.0", optional = true}
pygls = {version = "^1.0.0", optional = true}
Jinja2 = ">=2.11.3,<4.0.0"
pydantic = ">=2,<3.0"
click = ">=7.1.2,<9"

[tool.poetry.extras]
yaml = ["ruamel.yaml"]
lsp = ["pygls"]

[tool.poetry.dev-dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
pytest-console-scripts = "^1.4"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"
taskipy = "^1.4"
mypy = "^1.2.0"
sphinx-click = "^5.0.1"

[tool.poetry.scripts]
cp2klint = 'cp2k_input_tools.cli.lint:cp2klint'
fromcp2k = 'cp2k_input_tools.cli.fromcp2k:fromcp2k'
tocp2k = 'cp2k_input_tools.cli.tocp2k:tocp2k'
cp2kgen = 'cp2k_input_tools.cli.cp2kgen:cp2kgen'
cp2kget = 'cp2k_input_tools.cli.cp2kget:cp2kget'
cp2k-language-server = 'cp2k_input_tools.cli.lsp:cp2k_language_server'
cp2k-datafile-lint = 'cp2k_input_tools.cli.datafile_lint:cp2k_datafile_lint'

[tool.black]
line-length = 132
target_version = ['py39']

[tool.ruff]
# Enable flake8-bugbear (`B`) and isort (`I`) rules.
select = ["E", "F", "B", "I"]
line-length = 136
# ignore missing strict= argument for zip for py<3.10 compat
ignore = ["B905"]

[tool.taskipy.tasks]
test = "pytest"
html_docs = "make html -C docs"

[build-system]
requires = ["poetry>=1"]
build-backend = "poetry.masonry.api"
